# SMART-DOCUMENT-SUMMARIZER

./: .replit  app.py  pyproject.toml  report.txt
core/: document_processor.py  keyword_extractor.py  preprocessor.py  summarizer.py  text_extractor.py
utils/: file_handler.py
